otel-collector/k8s/otel-collector/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.111.0
          ports:
            - containerPort: 4317  # gRPC
            - containerPort: 4318  # HTTP
          args:
            - --config=/etc/otel/otel-collector-config.yaml
          volumeMounts:
            - name: otel-config
              mountPath: /etc/otel
              readOnly: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: otel-config
          configMap:
            name: otel-loki-config
            items:
              - key: otel-collector-config.yaml
                path: otel-collector-config.yaml
