otel-collector/k8s/otel-collector/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
  namespace: default
spec:
  selector:
    app: otel-collector
  ports:
    - name: http
      port: 4318
      targetPort: 4318
      protocol: TCP
  type: ClusterIP
